Fixed stick footer content overlap

--- a/reverse-hangman-app/src/Body.css
+++ b/reverse-hangman-app/src/Body.css
@@ -1,3 +1,3 @@
 .bodyContainer {
-    margin-bottom: 50px;
+    
 }
